# pypkgdemo

./: README.md  links.md  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml  python-tests.yml
spline_reticulator/: main.py
tests/: test_smoke.py
