[metadata]
name = pypkgdemo
version = attr: spline_reticulator.__version__
author = Petr Messner
author_email = petr.messner@gmail.com
description = Test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/messa/pypkgdemo
project_urls =
    Bug Tracker = https://github.com/messa/pypkgdemo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests

[options.entry_points]
console_scripts =
    reticulate-splines = spline_reticulator:main.reticulate_splines_main

[options.extras_require]
test =
    pytest
